--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -2047,7 +2047,11 @@ ABOUT
 .wp-video-item {
     /* display: flex;
     justify-content: center; */
-    margin-bottom: 36px;
+    /* margin-bottom: 36px; */
+}
+.video {
+    width: 100%;
+    height: 550px;
 }
 
 /* Backtop */
