--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -333,4 +333,9 @@
         justify-content: flex-end;
         margin-top: -60px;
     }
+
+    .video {
+      height: 350px;
+      padding: 0 12px;
+    } 
 }
