--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -2036,18 +2036,13 @@ ABOUT
 .text__address:hover {
     color: #fa9e1b;
 }
-
-
-
 .wp__content__contact {
     margin-top: 100px;
     margin-left: 28px;
 }
-
-.wp-video-item {
-    /* display: flex;
-    justify-content: center; */
-    margin-bottom: 36px;
+.video {
+    width: 100%;
+    height: 550px;
 }
 
 /* Backtop */
