--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -5,8 +5,8 @@
     }
 
     .home__wp-title {
-        /* padding-top: 70%;
-        transform: translateY(-30%); */
+        padding: 0 60px;
+        width: 100%;
     }
 
     .search {
@@ -14,16 +14,16 @@
     }
 
     .home__btn {
-        width: 60%;
+        width: 100%;
     }
 
     .home__wp-title h1:first-child {
-        font-size: 72px;
+        font-size: 28px;
     }
 
     .home__wp-title h1:nth-child(2) {
         font-family: 'Beyond';
-        font-size: 62px;
+        font-size: 22px;
         color: #fff;
         text-align: center;
         margin: 0 0 40px 0;
