--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -90,6 +90,11 @@
     .search__container__offers {
         margin-top: 60px;
     }
+
+    .img {
+        margin-top: 20px;
+        padding: 0 12px;
+    }
 }
 
 /* Tablet */
