--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -599,7 +599,7 @@ body {
 }
 
 .item__background--3 {
-    background-image: url(../img/phuquoc.jpg);
+    background-image: url(../img/angiang-tour.jpg);
     position: absolute;
     top: 0;
     left: 0;
@@ -2240,5 +2240,9 @@ body .wp__img__comment .content__comment {
 .content__tour {
     font-size: 1.3rem;
     line-height: 1.8rem;
+}
+
+.img_lictrinh {
+    width: 80%;
 }
 
